tests/snapshots/sizes__confirm_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│  FROM users                                              │
│  WHERE plan = 'pro'                                      │
│  ORDER ┌ confirm ───────────────────────────────┐        │
└────────│run (DELETE without WHERE) · will be    │────────┘
┌ result │refused — this session is read-only     │────────┐
│id  emai│                                        │        │
│1   ada@│DELETE FROM orders                      │00+00   │
│2   linu│                                        │00+00   │
│3   grac│y = run · n / esc = cancel              │00+00   │
│4   alan└────────────────────────────────────────┘00+00   │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
│6   katherine@example.com  pro   2026-03-21 16:40:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   y run · n / esc cancel
